# mesanote

./: .gitignore  CHANGELOG.md  README.md  SYNTAX.md  flake.nix  install.sh  pyproject.toml  setup.sh  test.html  test.mdoc
core/: pyproject.toml
core/mesanote/: __main__.py  cli.py  cursor.py  nodes.py  parser.py  tokenizer.py  tokens.py
core/tests/: test_nodes.py  test_parser.py  test_tokenizer.py  utils.py
examples/: daily_journal.html  daily_journal.mdoc  example.html  example.md  example.mdoc  example.nnn  guide.html  guide.mdoc  project_plan.html  project_plan.mdoc  test.mdoc
extension/: .gitignore  jsconfig.json  language-configuration.json  package-lock.json
extension/syntaxes/: mesanote.tmLanguage.json
extensions/vscode/: .vscodeignore  extension.js  language-configuration.json  package-lock.json  package.json
extensions/vscode/syntaxes/: mesanote.tmLanguage.json
nnn_lang/: __main__.py  parser.py  tokenizer.py
