[tool.poetry]
name = "mesanote"
version = "0.1.0"
description = ""
authors = ["V30P <nhenning06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
mesa = "mesanote.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
