[project]
name = "mesanote"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"

authors = [
  { name = "V30P", email = "nhenning06@gmail.com" }
]

dependencies = [
  "click>=8.3.1"
]

[project.scripts]
mesa = "mesanote.cli:cli"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "mesanote" }]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"